...
  int? selectedInches;
  double? selectedWeight;
  String? selectedGender;

  final List<int> feetOptions = List.generate(8, (i) => i + 1);
  final List<int> inchOptions = List.generate(12, (i) => i);
  final List<String> genderOptions = ["Male", "Female", "Other"];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Color(0xFFCFDFE2),
      appBar: AppBar(
        backgroundColor: const Color(0xFFCFDFE2),
        elevation: 0,
        leading: IconButton(
          key: const Key('backButton'),
          icon: const Icon(
            Icons.arrow_back_ios,
            color: Color(0xFF374144), 
          ),
          onPressed: () {
            Navigator.pop(context);
...
      body: Center(
        child: SingleChildScrollView( 
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Text(
                "BMI Calculator",
                textAlign: TextAlign.center,
                style: TextStyle(
                  fontSize: 30,
                  fontWeight: FontWeight.bold,
                  color: Color(0xFF374144),
                ),
...
                    padding: EdgeInsets.symmetric(horizontal: 10),
                    decoration: BoxDecoration(
                      color: Color(0xFFFFFFFF),
                      borderRadius: BorderRadius.circular(6),
                    ),
                    child: DropdownButton<int>(
                      key: const Key('Feet'),
                      value: selectedFeet,
                      underline: SizedBox(),
                      items: feetOptions.map((f) {
                        return DropdownMenuItem(value: f, child: Text("$f"));
                      }).toList(),
                      onChanged: (value) {
...
                    padding: EdgeInsets.symmetric(horizontal: 10),
                    decoration: BoxDecoration(
                      color: Color(0xFFFFFFFF),
                      borderRadius: BorderRadius.circular(6),
                    ),
                    child: DropdownButton<int>(
                      key: const Key('Inches'),
                      value: selectedInches,
                      underline: SizedBox(),
                      items: inchOptions.map((i) {
                        return DropdownMenuItem(value: i, child: Text("$i"));
                      }).toList(),
                      onChanged: (value) {
...
                    width: 100,
                    decoration: BoxDecoration(
                      color: Color(0xFFFFFFFF),
                      borderRadius: BorderRadius.circular(6),
                    ),
                    child: TextField(
                      key: const Key('Weight'),
                      keyboardType: const TextInputType.numberWithOptions(decimal: true),
                      inputFormatters: [
                        FilteringTextInputFormatter.allow(RegExp(r'[0-9.]')),
                      ],
                      decoration: InputDecoration(
                        border: InputBorder.none,
...
                    decoration: BoxDecoration(
                      color: Color(0xFFFFFFFF),
                      borderRadius: BorderRadius.circular(6),
                    ),

                    child: DropdownButton<String>(
                      key: const Key('Gender'),
                      value: selectedGender,
                      underline: SizedBox(),
                      isExpanded: true,
                      hint: Text("Select", style: TextStyle(
                fontFamily: 'AlbertSans-SemiBold',
                color: Color(0xFF374144),
...
        
              SizedBox(
                width: 220,
                height: 60,
                child: ElevatedButton(

                  key: const Key('Calculate', ),

                  style: ButtonStyle(
                      backgroundColor: WidgetStateProperty.resolveWith((states) {
                        if (states.contains(WidgetState.pressed)) {
                          return const Color(0xFF374144);   
                        }
...
                    ),
                    
                  onPressed: () {
                    if (selectedFeet == null || selectedInches == null || selectedWeight == null || selectedGender == null) {
                       ScaffoldMessenger.of(context).showSnackBar(
                        const SnackBar(
                          content: Text("Please fill in all fields."),
                          backgroundColor: Colors.redAccent,
                          duration: Duration(seconds: 2),
                        ),
                      );
                      return;
                    }
...
